--- a/PiniT/Views/Products/CustomerIndex.cshtml
+++ b/PiniT/Views/Products/CustomerIndex.cshtml
@@ -10,13 +10,13 @@
     @Html.ActionLink("Create New", "Create")
 </p>
 
-@using (Html.BeginForm("ManagerIndex", "Products", FormMethod.Get))
+@using (Html.BeginForm("CustomerIndex", "Products", FormMethod.Get))
 {
     <div id="filters" class="row">
         <div class="col-6 px-1">
-            @Html.EditorFor(x => x.Search, new { htmlAtributes = new { @class = "form-control", placeholde = "Search by product name" } })
+            @Html.EditorFor(x => x.Search, new { htmlAttributes = new { @class = "form-control", placeholder = "Search by product name" } })
         </div>
-        <div class="col-2 px-1">
+        <div class="col-4 px-1">
             @Html.DropDownListFor(x => x.Category, (SelectList)ViewBag.Categories, "Category", new { @class = "form-control" })
         </div>
         @*<div class="col-2 px-1">
