--- a/PiniT/Views/Restaurants/ManagerIndex.cshtml
+++ b/PiniT/Views/Restaurants/ManagerIndex.cshtml
@@ -1,17 +1,23 @@
 ﻿@model PiniT.Models.Restaurant
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "ManagerIndex";
 }
 
-<h2>Delete</h2>
+<h2>ManagerIndex</h2>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Restaurant</h4>
     <hr />
     <dl class="dl-horizontal">
-        @Html.HiddenFor(model => model.RestaurantId)
+        <dt>
+            @Html.DisplayNameFor(model => model.Manager.Email)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Manager.Email)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.CompanyName)
         </dt>
@@ -29,14 +35,8 @@
         </dd>
 
     </dl>
-
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "ManagerIndex")
-        </div>
-    }
 </div>
+<p>
+    @Html.ActionLink("Edit", "Edit", new { id = Model.RestaurantId }) |
+    @Html.ActionLink("Back to List", "Index")
+</p>
