--- a/PiniT/Views/Reservations/Create.cshtml
+++ b/PiniT/Views/Reservations/Create.cshtml
@@ -7,10 +7,10 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Reservation</h4>
         <hr />
@@ -18,24 +18,24 @@
 
         <p> Are you sure?</p>
         @*<div class="form-group">
-            @Html.LabelFor(model => model.BookDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.BookDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.BookDate, "", new { @class = "text-danger" })
+                @Html.LabelFor(model => model.BookDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.BookDate, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.BookDate, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.BookingFee, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.BookingFee, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.BookingFee, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
+            <div class="form-group">
+                @Html.LabelFor(model => model.BookingFee, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.BookingFee, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.BookingFee, "", new { @class = "text-danger" })
+                </div>
+            </div>*@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input  id="submit-button" type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
     </div>
@@ -47,4 +47,18 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+
+
+    @*<script>
+        let notification = $.connection.piniTHub;
+
+        $.connection.hub.start().done(() => {
+
+            $('#submit-button').click(() => {
+
+                notification.server.sendReservation(@Model.TableId,@Model.Comment);
+            });
+        });
+
+    </script>*@
 }
