--- a/PiniT/Views/Shared/_Layout.cshtml
+++ b/PiniT/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse"id="navbarNav">
+        <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", null, new { @class = "nav-link" })</li>
                 @if (User.IsInRole("Manager"))
@@ -25,7 +25,7 @@
                 }
                 @if (User.IsInRole("Customer"))
                 {
-                    <li class="nav-item">@Html.ActionLink("Reservations","Index","Reservations",null, new { @class = "nav-link" })</li>
+                    <li class="nav-item">@Html.ActionLink("Reservations", "Index", "Reservations", null, new { @class = "nav-link" })</li>
                 }
                 <li class="nav-item">@Html.ActionLink("About", "About", "Home", null, new { @class = "nav-link" })</li>
                 <li class="nav-item">@Html.ActionLink("Contact", "Contact", "Home", null, new { @class = "nav-link" })</li>
@@ -33,7 +33,7 @@
             @Html.Partial("_LoginPartial")
         </div>
     </nav>
-    
+
     <div class="container body-content">
         @RenderBody()
         <hr />
@@ -44,11 +44,33 @@
                 @Html.ActionLink("Business Account", "RegisterManager", "Account", routeValues: null, htmlAttributes: new { id = "registerLink", @class = "col-3 btn btn-primary" })
             }
         </footer>
+        <div id="chat"></div>
+        <div id="notifications"></div>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    <script src="~/Scripts/jquery.signalR-2.2.2.min.js"></script>
+    <script src="~/signalr/hubs"></script>
     @RenderSection("scripts", required: false)
 
+    <script>
+            $(document).ready(() => {
+
+                let hub = $.connection.piniTHub;
+                
+                hub.client.getReservation = (reservation) => {
+                    console.log(reservation);
+                    $('#notifications').append(`<p>${reservation.Customer} pinned Table:${reservation.Table} at ${reservation.Date} <br/> Comment : Bblaalbla </p>`);
+                };
+
+                $.connection.hub.start().done(() => {
+                    console.log('Connected');
+                });
+
+
+            });
+
+        </script>
 </body>
 </html>
