--- a/PiniT/Views/Reservations/Index.cshtml
+++ b/PiniT/Views/Reservations/Index.cshtml
@@ -6,46 +6,93 @@
 
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Customer.Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Table.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.BookDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.BookingFee)
-        </th>
-        <th></th>
-    </tr>
+    @*@foreach (var reservation in Model.Reservations)
+        {*@
+    <div class="row">
+        <div class="col-md-8 card shadow-lg p-0 mx-auto">
+            <div class="card-header border-bottom border-dark text-center">
+                <h4 class="m-0">Company Name</h4>
+            </div>
+            <div class="card-body bg-light boder border-dark text-center">
+                <div class="row">
+                <div class="col-sm-6 text-center">
+                    <p class="m-0">BookDate: <cite class="font-weight-light">19/7/2019</cite></p>
+                    <br>
+                    <p class="m-0">BookFee: <cite class="font-weight-light">1000$</cite></p>
+                </div>
+                <div class="col-sm-6 border-left text-center">
+                    <p class="m-0 ">-Comments: <cite class="font-weight-light"> Text</cite></p>
+                    @*<div class="card-footer border boder-info text-md-right">
+                    <p class="m-0">-Comments<cite class="font-weight-normal"> Text</cite></p>
+                </div>*@
+                </div>
+                </div>
+            </div>
+            </div>
+        </div>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Customer.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Table.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.BookDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.BookingFee)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ReservationId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ReservationId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ReservationId })
-        </td>
-    </tr>
-}
+    <div class="row">
+        <div class="col-md-8 card shadow-lg p-0 mx-auto mt-3">
+            <div class="card-header border-bottom border-dark text-center">
+                <h4 class="m-0">Company Name</h4>
+            </div>
+            <div class="card-body bg-light boder border-dark text-center">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <p class="m-0">BookDate: <cite class="font-weight-light">19/7/2019</cite></p>
+                        <br>
+                        <p class="m-0">BookFee: <cite class="font-weight-light">1000$</cite></p>
+                    </div>
+                    <div class="col-sm-6 border-left text-center">
+                        <p class="m-0 ">-Comments: <cite class="font-weight-light"> Text</cite></p>
+                        @*<div class="card-footer border boder-info text-md-right">
+                            <p class="m-0">-Comments<cite class="font-weight-normal"> Text</cite></p>
+                        </div>*@
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+@*}*@
 
-</table>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Customer.Email)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Table.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.BookDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.BookingFee)
+            </th>
+            <th></th>
+        </tr>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Customer.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Table.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.BookDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.BookingFee)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.ReservationId }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.ReservationId }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.ReservationId })
+                </td>
+            </tr>
+        }
+
+    </table>
