--- a/PiniT/Views/Shared/_Layout.cshtml
+++ b/PiniT/Views/Shared/_Layout.cshtml
@@ -39,37 +39,6 @@
 
 
         @RenderBody()
-
-        @*<div class="row">
-            <div class="col-md-2 card shadow-lg border border-danger p-0 fixed-bottom alert alert-dismissible fade show ml-auto" role="alert" style="border-width:5px;">
-                <div class="card-header border-dark font-weight-bolder bg-danger text-white text-center">
-                    <div class="row">
-
-                        <p class="col-10  mb-0 mr-auto">new reservation</p>
-                        <button type="button" class="close col-2 ml-auto mr-1" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                </div>
-                <div class="card-body bg-light border-danger text-center">
-                    <p class="m-0">customer name: <cite class="font-weight-light"></cite></p>
-                    <hr />
-                    <p class="m-0">table name: <cite class="font-weight-light"></cite></p>
-                    <hr />
-                    <p class="m-0">bookdate: <cite class="font-weight-light">  </cite></p>
-                    <hr />
-                    <button class="btn btn-danger m-0" type="button" data-toggle="collapse" data-target="#collapseexample" aria-expanded="false" aria-controls="collapseexample">
-                        comments
-                    </button>
-                    <div class="collapse" id="collapseexample">
-                        <div class="card card-body bg-light border-danger text-center mt-1">
-                           text area.... 
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>*@
         <hr />
         <footer class="row">
             <p class="mr-auto col-3">&copy; @DateTime.Now.Year - Pinit Application</p>
@@ -78,7 +47,9 @@
                 @Html.ActionLink("Business Account", "RegisterManager", "Account", routeValues: null, htmlAttributes: new { id = "registerLink", @class = "col-3 btn btn-primary" })
             }
         </footer>
-        <div id="chat"></div>
+        <div id="chat">
+            <div id="messages"></div>
+        </div>
         <div id="notifications"></div>
     </div>
 
@@ -128,6 +99,10 @@
                 </div>
             </div>
         </div>`);
+            };
+
+            hub.client.gotMessage = (from, message) => {
+                    $('#messages').append(`<p>${from}: ${message}</p>`)
             };
 
             $.connection.hub.start().done(() => {
