--- a/PiniT/Views/Restaurants/CustomerIndex.cshtml
+++ b/PiniT/Views/Restaurants/CustomerIndex.cshtml
@@ -24,11 +24,31 @@
 
                     <button id="@restaurant.RestaurantId" class="btn btn-secondary col-6 restaurant-chat">Chat</button>
                 </div>
-
             </div>
         </div>
     }
 </div>
+
+@*<div class="row">
+    <div class="col-md-2 card shadow-lg border border-success p-0 fixed-bottom alert alert-dismissible fade show ml-auto" role="alert" style="border-width:5px;">
+        <div class="card-header border-dark font-weight-bolder bg-success text-white text-center">
+            <div class="row">
+                <p class="col-10  mb-0 mr-auto ml-2">Compamy Name</p>
+                <button type="button" class="close col-2 ml-auto mr-1" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        </div>
+        <div class="card-body bg-light border-success">
+            <textarea id="messages" class="form-control"></textarea>
+             <br/>
+            <input id="message" class="form-control border border-success">
+            <button id="send" class="btn btn-success mt-1 mx-auto" type="button" aria-expanded="false">
+                Send
+            </button>
+        </div>
+    </div>
+</div>*@
 
 @section scripts {
 
@@ -39,22 +59,44 @@
             $('.restaurant-chat').click((e) => {
 
                 $(`#chat`).html('');
-                $('#chat').append(`<input id="message" type="text" />
-                                                   <button id="send">Send</button>
-                                                   <div id="messages"></div>`);
+                $('#chat').append(`
+                    <div class="row">
+                        <div class="card shadow-lg border border-success p-0 fixed-bottom alert alert-dismissible fade show ml-auto" role="alert" style="width:250px;">
+                            <div class="card-header border-dark font-weight-bolder bg-success text-white text-center">
+                                <div class="row">
+                                    <p class="col-10 mb-0 mr-auto ml-2">Compamy Name</p>
+                                    <button type="button" class="close col-2 ml-auto mr-1" data-dismiss="alert" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="card-body bg-light border-success">
+                                <div id="messages" class="overflow-auto" style="height:120px"></div>
+                                 <br/>
+                                <input id="message" class="form-control border border-success">
+                                <button id="send" class="btn btn-success mt-1 mx-auto" type="button" aria-expanded="false">
+                                    Send
+                                </button>
+            
+        
+                            </div>
+                        </div>
+                    </div>`);
 
                 $.connection.hub.start().done(() => {
 
                     $('#send').click(() => {
                         chat.server.sendToUser(e.target.id, $('#message').val());
                         $('#messages').append(`<p>Me: ${$('#message').val()}</p>`)
-
+                        $("#messages").scrollTop($("#messages")[0].scrollHeight);
                         $('#message').val('').focus();
                     });
 
                 });
+                
             });
         });
+
 
     </script>
 }
