Manager/Customer Contexes Admin Controller ManagerIndex on Products check!

--- a/PiniT/Views/Products/ManagerIndex.cshtml
+++ b/PiniT/Views/Products/ManagerIndex.cshtml
@@ -21,9 +21,6 @@
                 <div class="col-4 px-1">
                     @Html.DropDownListFor(x => x.Category, (SelectList)ViewBag.Categories, "Category", new { @class = "form-control", id = "category" })
                 </div>
-                @*<div class="col-2 px-1">
-                        @Html.EnumDropDownListFor(x => x.SortBy, "Sort By", new { @class = "form-control" })
-                    </div>*@
                 <div class="col-2 px-1">
                     <button id="search" type="submit" class="btn btn-primary btn-block">Search</button>
                 </div>
@@ -35,6 +32,9 @@
     <div class="row">
         @foreach (var category in Model.Categories.Reverse())
         {
+            if (Model.Products.Any(x => x.CategoryId == category.Name))
+            {
+
 
             <div class="col-sm-2"></div>
             <div class=" col-sm-8 rounded shadow-lg mx-auto mt-3 mb-1 text-center">
@@ -49,7 +49,7 @@
                 }
             </div>
             <div class="col-sm-2"></div>
-
+            }
         }
     </div>
 </div>
