--- a/PiniT/Views/Reservations/Create.cshtml
+++ b/PiniT/Views/Reservations/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-    <h3 class="m-0 text-center">@ViewBag.Restaurant.CompanyName</h3>
+    <h2 class="m-0 mt-3 mb-3 text-center a">@ViewBag.Restaurant.CompanyName</h2>
 
 @using (Html.BeginForm())
 {
@@ -37,7 +37,7 @@
         <label class="checkbox-inline col-md-12 text-center p-1 mb-2 mx-auto"><input type="checkbox" value="">  Are you Sure?</label>
     <div class="form-group">
         <div class="text-center mx-auto">
-            <input type="submit" value="Create" class="col-md-1 btn btn-warning p-1 mx-auto text-center" />
+            <input type="submit" value="Reservation" class="col-md-1 btn btn-warning p-1 mx-auto text-center" />
         </div>
     </div>
 </div>
