--- a/PiniT/Content/Site.css
+++ b/PiniT/Content/Site.css
@@ -1,4 +1,5 @@
 ﻿body {
+    background-color: rgba(179, 237, 241, 0.3);
     padding-top: 50px;
     padding-bottom: 20px;
 }
@@ -17,8 +18,31 @@
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
+input, select, textarea {
     max-width: 280px;
+}
+
+h2.a {
+    font-family: cursive;
+    /*font-family: "Times New Roman", Times, sans-serif;*/
+    text-shadow: 5px 5px 5px grey;
+    margin-left: 265px;
+}
+
+h3.a {
+    font-family: emoji;
+    /*font-family: "Times New Roman", Times, sans-serif;*/  
+    text-decoration:underline;
+}
+
+#a {
+    margin-left: 160px;
+    margin-bottom:10px;
+    margin-top:5px;
+}
+
+footer .glyphicon {
+    font-size: 20px;
+    margin-bottom: 20px;
+    color: #f4511e;
 }
