--- a/PiniT/Views/Restaurants/CustomerIndex.cshtml
+++ b/PiniT/Views/Restaurants/CustomerIndex.cshtml
@@ -4,29 +4,60 @@
     ViewBag.Title = "CustomerIndex";
 }
 
-<h2 class="h2">Are you hungry?</h2>
+<br>
+<h2 class="a">Available Restaurants</h2>
+
+<div class="row mt-3 mb-1">
+    <div id="a" class="col-md-6 p-3 border rounded bg-light mr-0">
+        @using (Html.BeginForm("CustomerIndex", "Restaurants", FormMethod.Get, new { id = "search-form" }))
+        {
+            <div id="filters" class="row">
+                <div class="col-6 px-1">
+                    @Html.EditorFor(x => x.Search, new { htmlAttributes = new { @class = "form-control", placeholder = "Search by Restaurant Name" } })
+                </div>
+                <div class="col-4 px-1">
+                    @*@Html.DropDownListFor(x => x.Restaurant, (SelectList)ViewBag.RestaurantType, "Category", new { @class = "form-control", id = "restType" })*@
+                </div>
+                @*<div class="col-2 px-1">
+                        @Html.EnumDropDownListFor(x => x.SortBy, "Sort By", new { @class = "form-control" })
+                    </div>*@
+                <div class="col-2 px-1">
+                    <button id="search" type="submit" class="btn btn-primary btn-block">Search</button>
+                </div>
+            </div>
+        }
+    </div>
+</div>
+
 <div class="row">
     @foreach (var restaurant in Model.Restaurants)
     {
-        <div class="col-md-3 card shadow border border-dark p-0 mx-1">
+        <div class="col-md-3 card shadow border border-dark p-0 mx-1 mb-3">
             <div class="card-header border-dark font-weight-bolder bg-secondary text-white text-center">
-                <p class="m-0">@restaurant.CompanyName</p>
+                <p class="m-0 font-italic font-weight-bolder">@restaurant.CompanyName</p>
             </div>
             <div class="card-body bg-light border-dark text-center">
                 <img class="card-img-top" src="https://comelite-arch.com/wp-content/uploads/2018/04/How-to-Create-a-Successful-Fine-Dining-Restaurant-0-256x256.jpg" alt="restaurant1">
                 <hr class="m-1" />
-                <p class="m-0">Info</p>
+                <p class="m-0 font-italic">Restaurant Type: <cite class="font-weight-light">@*@restaurant.RestaurantType*@</cite></p>
+                <p class="m-0 font-italic">Total Free Tables: <cite class="font-weight-light">@*@table.IsBooked*@15</cite></p>
+
             </div>
             <div class="card-footer border-dark bg-light text-center">
                 <div class="row">
                     @Html.ActionLink("Book Now!", "CustomerIndex", "Tables", new { id = restaurant.RestaurantId }, new { @class = "btn btn-danger col-12" })
                     @Html.ActionLink("Menu", "CustomerIndex", "Products", new { id = restaurant.RestaurantId }, new { @class = "btn btn-primary col-6" })
 
-                    <button id="@restaurant.RestaurantId" data-company="@restaurant.CompanyName"class="btn btn-secondary col-6 restaurant-chat">Chat</button>
+                    <button id="@restaurant.RestaurantId" data-company="@restaurant.CompanyName" class="btn btn-secondary col-6 restaurant-chat">Chat</button>
                 </div>
             </div>
         </div>
     }
+    <footer class="container-fluid text-right">
+        <a href="#myPage" title="To Bottom">
+            <span id="arrow" class="glyphicon glyphicon-chevron-down"></span>
+        </a>
+    </footer>
 </div>
 
 @section scripts {
@@ -56,8 +87,8 @@
                                 <button id="send" class="btn btn-success mt-1 mx-auto" type="button" aria-expanded="false">
                                     Send
                                 </button>
-            
-        
+
+
                             </div>
                         </div>
                     </div>`);
@@ -72,10 +103,19 @@
                     });
 
                 });
-                
+
             });
         });
+   
+        window.onload = () => {
+            //const categoryDropdown = document.getElementById('category');
+            const searchForm = document.getElementById('search-form');
+            let searchButton = document.getElementById('search');
 
+            categoryDropdown.oninput = (e) => {
+                searchForm.submit();
+            };
+        };
 
     </script>
 }
