--- a/PiniT/Views/Shared/_Layout.cshtml
+++ b/PiniT/Views/Shared/_Layout.cshtml
@@ -27,30 +27,85 @@
                 {
                     <li class="nav-item">@Html.ActionLink("Reservations", "Index", "Reservations", null, new { @class = "nav-link" })</li>
                 }
-                <li class="nav-item">@Html.ActionLink("About", "About", "Home", null, new { @class = "nav-link" })</li>
-                <li class="nav-item">@Html.ActionLink("Contact", "Contact", "Home", null, new { @class = "nav-link" })</li>
+                @*<li class="nav-item">@Html.ActionLink("About", "About", "Home", null, new { @class = "nav-link" })</li>
+                <li class="nav-item">@Html.ActionLink("Contact", "Contact", "Home", null, new { @class = "nav-link" })</li>*@
             </ul>
             @Html.Partial("_LoginPartial")
         </div>
     </nav>
 
-    <div class="container body-content">
-
-        @RenderBody()
-
-        <hr />
-        <footer class="row">
-            <p class="mr-auto col-3">&copy; @DateTime.Now.Year - Pinit Application</p>
-            @if (!User.Identity.IsAuthenticated)
-            {
-                @Html.ActionLink("Business Account", "RegisterManager", "Account", routeValues: null, htmlAttributes: new { id = "registerLink", @class = "col-3 btn btn-primary" })
-            }
-        </footer>
-        <div id="chat">
-            <div id="messages"></div>
+    @*<div class="row">
+        <button type="button" class="btn btn-default bg-info mr-4 mt-2 ml-auto" data-toggle="collapse" data-target="#demo" aria-label="Left Align" onmouseover="hoverFunction()">
+            <span class="glyphicon glyphicon-align-left" aria-hidden="true">Info</span>
+        </button>
         </div>
-        <div id="notifications"></div>
+        <div id="demo" class="collapse">
+            <div class="row">
+                <div class="col-sm-1 card shadow-lg bg-transparent p-0 ml-auto mt-1 mr-3">               
+                       
+                        <div class="row">
+                            <div class="card-body border-info text-center">
+                                <div class="row">
+                                <button class="btn btn-info p-0 mb-1 mr-4 ml-auto" type="button" data-toggle="collapse" data-target="#collapseexample" aria-expanded="false" aria-controls="collapseexample">
+                                    @Html.ActionLink("About", "About", "Home", null, new { @class = "nav-link" })
+                                </button>
+                                    </div>
+                                <div class="row">
+                                <button class="btn btn-info p-0 mr-3 ml-auto" type="button" data-toggle="collapse" data-target="#collapseexample" aria-expanded="false" aria-controls="collapseexample">
+                                    @Html.ActionLink("Contact", "Contact", "Home", null, new { @class = "nav-link" })
+                                </button></div>
+                            </div>
+                        </div>
+                </div>
+            </div>
+        </div>*@
+        
+<div class="row">
+    <div class="panel-group btn btn-default shadow-lg p-1 bg-info mr-4 mt-2 bg-transparent border border-info ml-auto text-center" id="accordion" role="tablist" aria-multiselectable="true">
+        <div class="panel panel-default bg-transparent">
+            <div class="panel-heading" role="tab" id="headingOne">
+                <h5 class="panel-title">
+                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        Info
+                    </a>
+                </h5>
+            </div>
+            <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+                <div class="panel-body">
+                    <div class="row">
+                        <button class="btn btn-info bg-transparent border-0 p-0 mb-1 ml-1 font-weight-light" type="button" data-toggle="collapse" data-target="#collapseexample" aria-expanded="false" aria-controls="collapseexample">
+                            
+                            @Html.ActionLink("About", "About", "Home", null, new { @class = "nav-link" })
+                        </button>
+                    </div>
+                    <div class="row">
+                        <button class="btn btn-info p-0 bg-transparent border-0 font-weight-light" type="button" data-toggle="collapse" data-target="#collapseexample" aria-expanded="false" aria-controls="collapseexample">
+                            @Html.ActionLink("Contact", "Contact", "Home", null, new { @class = "nav-link" })
+                        </button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
     </div>
+</div>
+
+        <div class="container body-content">
+
+            @RenderBody()
+            <hr />
+            <footer class="row">
+                <p class="mr-auto col-3">&copy; @DateTime.Now.Year - Pinit Application</p>
+                @if (!User.Identity.IsAuthenticated)
+                {
+                    @Html.ActionLink("Business Account", "RegisterManager", "Account", routeValues: null, htmlAttributes: new { id = "registerLink", @class = "col-3 btn btn-primary" })
+                }
+            </footer>
+            <div id="chat">
+                <div id="messages"></div>
+            </div>
+            <div id="notifications"></div>
+        </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
@@ -69,34 +124,34 @@
                 console.log(reservation);
                 notificationElement.innerHTML = '';
                 $('#notifications').append(`<div class="row">
-                    <div class="col-md-2 card shadow-lg border border-danger p-0 fixed-bottom alert alert-dismissible fade show ml-auto" role="alert" style="border-width:5px;">
-                        <div class="card-header border-dark font-weight-bolder bg-danger text-white text-center">
-                            <div class="row">
+                        <div class="col-md-2 card shadow-lg border border-danger p-0 fixed-bottom alert alert-dismissible fade show ml-auto" role="alert" style="border-width:5px;">
+                            <div class="card-header border-dark font-weight-bolder bg-danger text-white text-center">
+                                <div class="row">
 
-                                <p class="col-10  mb-0 mr-auto">new reservation</p>
-                                <button type="button" class="close col-2 ml-auto mr-1" data-dismiss="alert" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
+                                    <p class="col-10  mb-0 mr-auto">new reservation</p>
+                                    <button type="button" class="close col-2 ml-auto mr-1" data-dismiss="alert" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
                             </div>
-                        </div>
-                        <div class="card-body bg-light border-danger text-center">
-                            <p class="m-0">Customer: <cite class="font-weight-light">${reservation.Customer}</cite></p>
-                            <hr />
-                            <p class="m-0">Table: <cite class="font-weight-light">${reservation.Table}</cite></p>
-                            <hr />
-                            <p class="m-0">Book date: <cite class="font-weight-light">${reservation.Date}  </cite></p>
-                            <hr />
-                            <button class="btn btn-danger m-0" type="button" data-toggle="collapse" data-target="#collapseexample" aria-expanded="false" aria-controls="collapseexample">
-                                comments
-                            </button>
-                            <div class="collapse" id="collapseexample">
-                                <div class="card card-body bg-light border-danger text-center mt-1">
-                                   ${reservation.Comment}
+                            <div class="card-body bg-light border-danger text-center">
+                                <p class="m-0">Customer: <cite class="font-weight-light">${reservation.Customer}</cite></p>
+                                <hr />
+                                <p class="m-0">Table: <cite class="font-weight-light">${reservation.Table}</cite></p>
+                                <hr />
+                                <p class="m-0">Book date: <cite class="font-weight-light">${reservation.Date}  </cite></p>
+                                <hr />
+                                <button class="btn btn-danger m-0" type="button" data-toggle="collapse" data-target="#collapseexample" aria-expanded="false" aria-controls="collapseexample">
+                                    comments
+                                </button>
+                                <div class="collapse" id="collapseexample">
+                                    <div class="card card-body bg-light border-danger text-center mt-1">
+                                       ${reservation.Comment}
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>`);
+                    </div>`);
             };
 
             hub.client.gotMessage = (from, message) => {
@@ -108,9 +163,21 @@
             });
         });
 
+        $(".panel-heading").parent('.panel').hover(
+          function() {
+            $(this).children('.collapse').collapse('show');
+          }, function() {
+            $(this).children('.collapse').collapse('hide');
+          }
+        );
+
         function closeWin() {
             close - button.close();
         }
+
+    function hoverFunction() { 
+                window.open(""); 
+            }
 
     </script>
 </body>
